补充部分数据